# kountdown

./: .gitignore  CMakeLists.txt  README.md  org.kde.tutorial.desktop
src/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
src/android/: AndroidManifest.xml
src/components/: AddEditDialog.qml  CMakeLists.txt  KountdownDelegate.qml
